[TOMEE-4355] Try to workaround Mojarra+OWB integration (#1278)
* Try to workaround Mojarra + OWB integration

* Move MojarraAfterBeanDiscoveryDecorator out of inner class

* Programmatically replace CDI extension instead of config which can conflict with user

* Retrieve WebBeansContext from beanManager

* Fix missing license header

* Inject WebBeansContext from assembler into additional/replacement extension when needed

* Register extension replacement globally instead of per deployed Application